# blacksheep-msgspec-starter

./: .gitignore  README.md  dev.py  pyproject.toml
.github/workflows/: deployment.yml  tests-and-checks.yml
app/: auth.py  binders.py  main.py  settings.py
app/apps/: routes.py
app/apps/hello_world/: api.py
app/apps/users/: api.py  dtos.py
app/core/: auth.py  errors.py  logging_conf.py  responses.py  settings.py
app/lib/: binders.py  responses.py
docker/: Dockerfile  gunicorn_conf.py
tests/: test_binders.py  test_core.py
